--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                 { id: 36, name: '指纹', singer: '胡歌', category: '国语' },
                 { id: 37, name: '记得', singer: '张惠妹', category: '国语' },
                 { id: 38, name: '心墙', singer: '郭静', category: '国语' },
-                { id: 39, name: 'BINGBIAN病变', singer: 'Cubi/Fi9江澈/Birck', category: '国语' },
+                { id: 39, name: 'BINGBIAN病变', singer: 'Cubi、Fi9江澈、Birck', category: '国语' },
                 { id: 40, name: '爱错', singer: '王力宏', category: '国语' },
                 { id: 41, name: '偏爱', singer: '张芸京', category: '国语' },
                 { id: 42, name: '锦鲤抄', singer: '银临、云の泣', category: '国语' },
@@ -274,8 +274,8 @@
                 { id: 46, name: '情非得已', singer: '庾澄庆', category: '国语' },
                 { id: 47, name: '错的人', singer: '萧亚轩', category: '国语' },
                 { id: 48, name: '三国杀', singer: '汪苏泷', category: '国语' },
-                { id: 49, name: '阴阳先生', singer: '洛天依Official/言和', category: '日语' },
-                { id: 50, name: '普通disco', singer: '洛天依、言和', category: '日语' },
+                { id: 49, name: '阴阳先生', singer: '洛天依Official/言和', category: '国语' },
+                { id: 50, name: '普通disco', singer: '洛天依、言和', category: '国语' },
                 { id: 51, name: '红装', singer: '徐良、阿悄', category: '国语' },
                 { id: 52, name: '友情出演', singer: '徐良、小凌', category: '国语' },
                 { id: 53, name: '不分手的恋爱', singer: '汪苏泷', category: '国语' },
@@ -307,24 +307,24 @@
                 { id: 79, name: '勇敢的幸福', singer: 'Sweety', category: '国语' },
                 { id: 80, name: '只对你有感觉', singer: '飞轮海、田馥甄', category: '国语' },
                 { id: 81, name: 'ロメオとシンデレラ（罗密欧与灰姑娘）', singer: '初音未来', category: '日语' },
-                { id: 82, name: 'メランコリック（忧郁的心情）', singer: 'Junky/镜音连', category: '日语' },
+                { id: 82, name: 'メランコリック（忧郁的心情）', singer: 'Junky、镜音连', category: '日语' },
                 { id: 83, name: '天ノ弱', singer: '164、GUMI', category: '日语' },
                 { id: 84, name: '深海少女', singer: '初音未来', category: '日语' },
-                { id: 85, name: 'モザイクロール（马赛克卷）', singer: 'GUMI/DECO*27', category: '日语' },
-                { id: 86, name: 'おじゃま虫（麻烦鬼）', singer: 'DECO*27/初音未来', category: '日语' },
+                { id: 85, name: 'モザイクロール（马赛克卷）', singer: 'GUMI、DECO*27', category: '日语' },
+                { id: 86, name: 'おじゃま虫（麻烦鬼）', singer: 'DECO*27、初音未来', category: '日语' },
                 { id: 87, name: '妄想税', singer: '初音未来', category: '日语' },
-                { id: 88, name: 'からくりピエロ（活动小丑）', singer: '40mP/初音未来', category: '日语' },
-                { id: 89, name: 'From Y to Y', singer: '初音未来/ジミーサムP', category: '日语' },
+                { id: 88, name: 'からくりピエロ（活动小丑）', singer: '40mP、初音未来', category: '日语' },
+                { id: 89, name: 'From Y to Y', singer: '初音未来、ジミーサムP', category: '日语' },
                 { id: 90, name: 'Glow', singer: 'H△G', category: '日语' },
                 { id: 91, name: 'ホシアイ（七夕）', singer: 'イトヲカシ', category: '日语' },
-                { id: 92, name: 'Calc.', singer: 'ジミーサムP/りぶ', category: '日语' },
-                { id: 93, name: 'Just be friends', singer: 'Dixie Flatline/巡音ルカ', category: '日语' },
-                { id: 94, name: 'Tell your world', singer: 'livetune/初音未来', category: '日语' },
+                { id: 92, name: 'Calc.', singer: 'ジミーサムP、りぶ', category: '日语' },
+                { id: 93, name: 'Just be friends', singer: 'Dixie Flatline、巡音ルカ', category: '日语' },
+                { id: 94, name: 'Tell your world', singer: 'livetune、初音未来', category: '日语' },
                 { id: 95, name: '雨き声残響', singer: 'すぃ', category: '日语' },
                 { id: 96, name: 'サマータイムレコード（夏令时记录）', singer: 'Jin/IA', category: '日语' },
-                { id: 97, name: '夕景イエスタデイ（夕景昨日）', singer: 'Jin/IA', category: '日语' },
-                { id: 98, name: '小夜子', singer: '初音未来/みきとP', category: '日语' },
-                { id: 99, name: 'ドーナツホール（甜甜圈洞）', singer: '米津玄师/GUMI', category: '日语' },
+                { id: 97, name: '夕景イエスタデイ（夕景昨日）', singer: 'Jin、IA', category: '日语' },
+                { id: 98, name: '小夜子', singer: '初音未来、みきとP', category: '日语' },
+                { id: 99, name: 'ドーナツホール（甜甜圈洞）', singer: '米津玄师、GUMI', category: '日语' },
                 { id: 100, name: '紅蓮華', singer: 'LiSA', category: '日语' },
                 { id: 101, name: 'ブルーバード（青鸟）', singer: 'いきものがかり', category: '日语' },
                 { id: 102, name: '残酷な天使のデーゼ（残酷天使的行动纲领）', singer: '高桥洋子', category: '日语' },
@@ -352,15 +352,15 @@
                 { id: 124, name: 'たぶん（大概）', singer: 'YOASOBI', category: '日语' },
                 { id: 125, name: '炎', singer: 'LiSA', category: '日语' },
                 { id: 126, name: 'ヨンジュウナナ（四十七）', singer: 'りぶ', category: '日语' },
-                { id: 127, name: 'サリシノハラ（离去之原）', singer: '初音未来/みきとP', category: '日语' },
-                { id: 128, name: '独りんぼエンヴィー（孑然妒火）', singer: 'koyori/初音未来', category: '日语' },
-                { id: 129, name: 'オレンジ（Orange）', singer: 'トーマ/初音ミク', category: '日语' },
-                { id: 130, name: '上弦の月', singer: '黒うさP/KAITO', category: '日语' },
-                { id: 131, name: 'Blessing 世界版', singer: '茶理理/V.A.', category: '日语' },
-                { id: 132, name: 'Connecting', singer: 'halyosy/V.A.', category: '日语' },
+                { id: 127, name: 'サリシノハラ（离去之原）', singer: '初音未来、みきとP', category: '日语' },
+                { id: 128, name: '独りんぼエンヴィー（孑然妒火）', singer: 'koyori、初音未来', category: '日语' },
+                { id: 129, name: 'オレンジ（Orange）', singer: 'トーマ、初音ミク', category: '日语' },
+                { id: 130, name: '上弦の月', singer: '黒うさP、KAITO', category: '日语' },
+                { id: 131, name: 'Blessing 世界版', singer: '茶理理、V.A.', category: '日语' },
+                { id: 132, name: 'Connecting', singer: 'halyosy、V.A.', category: '日语' },
                 { id: 133, name: '樱花樱花想见你', singer: 'RSP', category: '日语' },
-                { id: 134, name: 'BadBye', singer: 'koma\'n/初音未来', category: '日语' },
-                { id: 135, name: '恋愛裁判', singer: '40mP/初音未来', category: '日语' },
+                { id: 134, name: 'BadBye', singer: 'koma、初音未来', category: '日语' },
+                { id: 135, name: '恋愛裁判', singer: '40mP、初音未来', category: '日语' },
                 { id: 136, name: '小さな恋の歌（小小恋歌）', singer: 'MONGOL800', category: '日语' },
                 { id: 137, name: '恋', singer: '星野源', category: '日语' },
                 { id: 138, name: '二時間だけのバカンス（只有两小时的假期）', singer: '宇多田光、椎名林檎', category: '日语' },
@@ -377,7 +377,7 @@
                 { id: 149, name: 'プラチナ（白金）', singer: '坂本真绫', category: '日语' },
                 { id: 150, name: 'Overlap', singer: 'KIMERU', category: '日语' },
                 { id: 151, name: 'Masked bitcH', singer: 'しゅーず', category: '日语' },
-                { id: 152, name: '心做し（心理作用）', singer: 'GUMI/一之瀬ユウ', category: '日语' },
+                { id: 152, name: '心做し（心理作用）', singer: 'GUMI、一之瀬ユウ', category: '日语' },
                 { id: 153, name: '透明哀歌', singer: 'n-buna、GUMI', category: '日语' },
                 { id: 154, name: 'しわ（皱纹）', singer: 'GUMI、buzzG', category: '日语' },
                 { id: 155, name: '恋愛勇者', singer: 'Last Note.、GUMI', category: '日语' },
